# The-Project

./: CMakeLists.txt  README  board  board.cpp  main.cpp
extra_folder/: No-eye_deer
gamemode1/: CMakeLists.txt  basic_actions.cpp  basic_actions.h  behaviour.cpp  behaviour.h  board.cpp
graphics/: CMakeLists.txt
graphics /: CMakeLists.txt  board.cpp
libraries/: CMakeLists.txt  Cell.h  Test  basic_actions.cpp  basic_actions.h  behaviour.cpp  behaviour.h  board.h  h&s.cpp  heroes  heroes.cpp  heroes.h  heroes_db.txt  spells.h
libraries/heroes/: heroes.cpp  heroes.h
main_code/: Read_this  board.h  button.cpp  heroes.cpp  heroes.h
